<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivityTabTime">

    <!-- Left Side -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/Header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/header"
            android:orientation="horizontal"
            android:paddingStart="10dp"
            android:paddingTop="20dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"
            tools:ignore="MissingConstraints">

            <Button
                android:id="@+id/Group"
                android:layout_width="98dp"
                android:layout_height="50dp"
                android:backgroundTint="@color/blue"
                android:onClick="goToGroup"
                android:textColor="@color/blueBar"
                android:text="@string/Group"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="155dp"
                android:layout_height="60dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/Field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/Level"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:textColor="@color/white"
                    app:autoSizeTextType="uniform" />
            </LinearLayout>

            <Button
                android:id="@+id/Language"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:backgroundTint="@color/blue"
                android:onClick="switchLanguageMethod"
                android:textColor="@color/blueBar"
                app:autoSizeTextType="uniform" />

        </LinearLayout>

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/header"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:paddingEnd="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/AllSession"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:backgroundTint="@color/selected_button"
                    android:onClick="switchDay"
                    android:text="@string/all_session"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/Sunday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:backgroundTint="@color/blue"
                    android:onClick="switchDay"
                    android:text="@string/Sunday"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/Monday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:backgroundTint="@color/blue"
                    android:onClick="switchDay"
                    android:text="@string/Monday"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/Tuesday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:backgroundTint="@color/blue"
                    android:onClick="switchDay"
                    android:text="@string/Tuesday"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/Wednesday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:backgroundTint="@color/blue"
                    android:onClick="switchDay"
                    android:text="@string/Wednesday"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/Thursday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:backgroundTint="@color/blue"
                    android:onClick="switchDay"
                    android:text="@string/Thursday"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/Saturday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/blue"
                    android:onClick="switchDay"
                    android:text="@string/Saturday"
                    android:textColor="@color/white" />
            </LinearLayout>
        </HorizontalScrollView>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background_app">

            <LinearLayout
                android:id="@+id/layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="20dp"
                android:paddingTop="6dp"
                android:paddingEnd="20dp" />
        </ScrollView>

    </LinearLayout>

    <!-- Divider Line -->

</androidx.constraintlayout.widget.ConstraintLayout>
